--- a/portfolio/scss/style.css
+++ b/portfolio/scss/style.css
@@ -619,10 +619,15 @@ body {
 }
 
 .main .video .video-player {
+  height: auto;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -632,17 +637,33 @@ body {
   margin-bottom: 100px;
 }
 
-.main .video .video-player img {
+.main .video .video-player .screensaver {
+  position: absolute;
   width: 100%;
-  max-width: 100%;
+  height: 100%;
+  background-image: url(../assets/img/video-player.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  z-index: 1;
+  cursor: pointer;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.main .video .video-player .view-video {
+  width: calc(100% - 4px);
   -o-object-fit: cover;
      object-fit: cover;
+  border: solid 2px var(--color-gold);
+  border-bottom: none;
 }
 
 .main .video .video-player .btn-play {
   background: transparent;
   border: 0;
   position: absolute;
+  z-index: 1;
   cursor: pointer;
   background-image: url("../assets/svg/Play_hover.svg");
   background-size: contain;
@@ -656,6 +677,100 @@ body {
 .main .video .video-player .btn-play:hover {
   -webkit-filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
           filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+}
+
+.main .video .video-player .controls {
+  color: #ffffff;
+  background-color: #000000;
+  width: calc(100% - 4px);
+  height: 60px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  border: solid 2px var(--color-gold);
+  border-top: none;
+}
+
+.main .video .video-player .controls .icon-controls {
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  margin: 9px 0;
+  cursor: pointer;
+  width: 40px;
+  height: 40px;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.main .video .video-player .controls .icon-controls:hover {
+  -webkit-filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+          filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+}
+
+.main .video .video-player .controls .play {
+  background-image: url(../assets/svg/play.svg);
+}
+
+.main .video .video-player .controls .pause {
+  background-image: url(../assets/svg/pause.svg);
+}
+
+.main .video .video-player .controls .volum-on {
+  background-image: url(../assets/svg/volume.svg);
+}
+
+.main .video .video-player .controls .volum-off {
+  background-image: url(../assets/svg/mute.svg);
+}
+
+.main .video .video-player .controls .progress {
+  background: -webkit-gradient(linear, left top, right top, from(var(--color-gold)), color-stop(40%, var(--color-gold)), color-stop(40%, #fff), to(#fff));
+  background: linear-gradient(to right, var(--color-gold) 0%, var(--color-gold) 40%, #fff 40%, #fff 100%);
+  border: solid 2px var(--color-gold);
+  border-radius: 8px;
+  height: 10px;
+  width: 60%;
+  outline: none;
+  -webkit-transition: background 450ms ease-in;
+  transition: background 450ms ease-in;
+  -webkit-appearance: none;
+}
+
+.main .video .video-player .controls .progress::-webkit-slider-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  cursor: ew-resize;
+  background: #434343;
+}
+
+.main .video .video-player .controls .volume {
+  background: -webkit-gradient(linear, left top, right top, from(var(--color-gold)), color-stop(40%, var(--color-gold)), color-stop(40%, #fff), to(#fff));
+  background: linear-gradient(to right, var(--color-gold) 0%, var(--color-gold) 40%, #fff 40%, #fff 100%);
+  border: solid 2px var(--color-gold);
+  border-radius: 8px;
+  height: 10px;
+  width: 20%;
+  outline: none;
+  -webkit-transition: background 450ms ease-in;
+  transition: background 450ms ease-in;
+  -webkit-appearance: none;
+}
+
+.main .video .video-player .controls .volume::-webkit-slider-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  -webkit-appearance: none;
+  cursor: ew-resize;
+  background: #434343;
 }
 
 .main .video-light-theme .title {
@@ -694,10 +809,6 @@ body {
 
 .main .video-light-theme .title span:after {
   margin-left: 3%;
-}
-
-.main .video-light-theme .video-player .btn-play {
-  background-image: url("../assets/svg/Play_Unvisited.svg");
 }
 
 .main .price .title {
@@ -1093,11 +1204,7 @@ body {
           justify-content: space-between;
 }
 
-.footer .content-footer .left-content-footer {
-  text-decoration: none;
-}
-
-.footer .content-footer .left-content-footer .link-github {
+.footer .content-footer .link-github {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1106,7 +1213,7 @@ body {
   margin: 0;
 }
 
-.footer .content-footer .left-content-footer .link-github .item-link-github {
+.footer .content-footer .link-github .item-link-github {
   font-family: "Inter", sans-serif;
   font-style: normal;
   font-weight: normal;
@@ -1118,7 +1225,11 @@ body {
   transition: 1s;
 }
 
-.footer .content-footer .left-content-footer:hover .item-link-github {
+.footer .content-footer .link-github .link-github-footer {
+  text-decoration: none;
+}
+
+.footer .content-footer .link-github .link-github-footer:hover .item-link-github {
   color: var(--color-gold);
 }
 
@@ -1266,7 +1377,7 @@ body {
     padding-right: 5%;
   }
   .main .video .video-player.center {
-    width: 100%;
+    width: calc(100% - 40px);
   }
 }
 
@@ -1290,6 +1401,13 @@ body {
   .main .skills .skills-container .item-skills:nth-child(1),
   .main .skills .skills-container .item-skills:nth-child(2) {
     margin-bottom: 71px;
+  }
+  .main .video .video-player .controls .progress {
+    height: 7px;
+    width: 50%;
+  }
+  .main .video .video-player .controls .volume {
+    height: 7px;
   }
   .main .portfolio .container-imgs .item-portfolio {
     width: 100%;
@@ -1566,14 +1684,22 @@ body {
     width: 75px;
     height: 75px;
   }
-  .main .video .video-player img {
-    display: none;
+  .main .video .video-player .controls {
+    position: relative;
+    padding-top: 10px;
   }
-  .main .video .video-player {
-    background-image: url(../assets/img/video-player1.jpg);
-    background-repeat: no-repeat;
-    height: 418px;
-    margin-bottom: 78px;
+  .main .video .video-player .controls .icon-controls {
+    width: 35px;
+  }
+  .main .video .video-player .controls .progress {
+    position: absolute;
+    top: -10%;
+    width: 100%;
+    border: none;
+  }
+  .main .video .video-player .controls .volume {
+    width: 65%;
+    border: none;
   }
   .main .price .cards-price .item-price {
     width: 43.6%;
@@ -1672,6 +1798,29 @@ body {
   .main .skills .skills-container {
     margin-bottom: 65px;
   }
+  .main .video .video-player.center {
+    width: 90%;
+  }
+  .main .video .video-player .controls {
+    height: auto;
+    padding-top: 0;
+  }
+  .main .video .video-player .controls .icon-controls {
+    width: 25px;
+    height: 25px;
+  }
+  .main .video .video-player .controls .volume {
+    width: 55%;
+  }
+  .main .video .video-player .controls .volume,
+  .main .video .video-player .controls .progress {
+    height: 7px;
+  }
+  .main .video .video-player .controls .volume::-webkit-slider-thumb,
+  .main .video .video-player .controls .progress::-webkit-slider-thumb {
+    width: 15px;
+    height: 15px;
+  }
   .main .contacts .content-contacts {
     width: 74%;
   }
@@ -1705,9 +1854,19 @@ body {
   .main .skills .skills-container .item-skills .description-skills {
     width: 80%;
   }
-  .main .video .video-player {
-    background-size: cover;
-    background-position: -100px;
+  .main .video .video-player .btn-play {
+    width: 50px;
+  }
+  .main .video .video-player .controls {
+    padding-top: 0;
+    font-size: 10px;
+  }
+  .main .video .video-player .controls .volume,
+  .main .video .video-player .controls .progress {
+    height: 5px;
+  }
+  .main .video .video-player .controls .volume {
+    width: 50%;
   }
 }
 
@@ -1723,6 +1882,10 @@ body {
 @media screen and (max-width: 320px) {
   .main .portfolio .title span {
     padding: 0;
+  }
+  .main .video .video-player .controls .icon-controls {
+    width: 20px;
+    height: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
