--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -5,6 +5,7 @@ h2 {
   margin: 0;
 }
 body {
+  height: 100vh;
   font-family: "Inter", sans-serif;
   font-style: normal;
   line-height: 50px;
@@ -25,6 +26,25 @@ body {
   width: 100%;
   margin: 0 auto;
   /* background-color: #1b2326; */
+}
+section {
+  text-align: center;
+}
+.container-game {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  width: 306px;
+  margin: 50px auto;
+}
+.item {
+  font-family: "Permanent Marker", cursive;
+  width: 100px;
+  height: 100px;
+  /* box-shadow: 0 0 0 1px #333333; */
+  border: 1px solid #333333;
+  cursor: pointer;
+  line-height: 100px;
+  font-size: 60px;
 }
 
 footer {
