--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -1,7 +1,8 @@
 html {
   scroll-behavior: smooth;
 }
-h2 {
+h2,
+h1 {
   margin: 0;
 }
 body {
@@ -9,12 +10,12 @@ body {
   font-family: "Inter", sans-serif;
   font-style: normal;
   line-height: 50px;
-  color: #585b56;
+  color: #2d0625;
   font-size: 2rem;
   margin: 0;
 }
 .wrapper {
-  background-color: #f5f0ce;
+  background-color: #d5e3ac;
 }
 .container {
   max-width: 1920px;
@@ -25,7 +26,47 @@ body {
   max-width: 1400px;
   width: 100%;
   margin: 0 auto;
-  /* background-color: #1b2326; */
+}
+header {
+  display: flex;
+  align-items: center;
+  height: 80px;
+  background-color: #520c44;
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+.logo {
+  height: 60px;
+  width: 60px;
+  max-width: 100%;
+  object-fit: cover;
+  /* filter: invert(93%) sepia(4%) saturate(1934%) hue-rotate(29deg)
+    brightness(96%) contrast(93%); */
+  filter: invert(54%) sepia(59%) saturate(1098%) hue-rotate(283deg)
+    brightness(98%) contrast(97%);
+}
+.title {
+  font-size: 2rem;
+  color: #f662d1;
+}
+.sound {
+  width: 50px;
+  height: 50px;
+  filter: invert(93%) sepia(4%) saturate(1934%) hue-rotate(29deg)
+    brightness(250%) contrast(93%);
+  cursor: pointer;
+}
+.sound:hover {
+  filter: invert(74%) sepia(98%) saturate(302%) hue-rotate(27deg)
+    brightness(157%) contrast(88%);
+}
+main {
+  display: flex;
+  align-items: center;
+  max-height: calc(100vh - 180px);
+  height: 100%;
 }
 section {
   text-align: center;
@@ -34,26 +75,44 @@ section {
   display: grid;
   grid-template-columns: repeat(3, auto);
   width: 306px;
-  margin: 50px auto;
+  margin: 0 auto;
+  margin-bottom: 30px;
 }
 .item {
   font-family: "Permanent Marker", cursive;
   width: 100px;
   height: 100px;
-  /* box-shadow: 0 0 0 1px #333333; */
   border: 1px solid #333333;
   cursor: pointer;
   line-height: 100px;
   font-size: 60px;
 }
+.start-game {
+  width: 200px;
+  height: 60px;
+  margin-top: 50px;
+  background-color: #bdef53;
+  color: #2d0625;
+  font-family: "Inter", sans-serif;
+  font-style: normal;
+  line-height: 50px;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+}
+.start-game:hover {
+  border: solid 1px #333333;
+  background-color: rgba(150, 223, 244, 0.5);
+}
 
 footer {
   display: flex;
   align-items: center;
-  height: 150px;
-  background-color: #b49987;
+  height: 100px;
+  background-color: #2d0625;
   font-size: 1.5rem;
-  color: #1b2326;
+  color: #d5e3ac;
 }
 .content-footer {
   display: flex;
@@ -61,6 +120,7 @@ footer {
 }
 .link-github {
   display: flex;
+  align-self: center;
   list-style: none;
   padding: 0;
   margin: 0;
@@ -74,7 +134,7 @@ footer {
   margin-right: 20px;
 }
 .link-github-footer:hover .item-link-github {
-  color: #6a2202;
+  color: #bdef53;
 }
 .center-content-footer img {
   max-height: 50px;
@@ -82,4 +142,11 @@ footer {
   max-width: 100%;
   width: 100%;
   object-fit: cover;
+  filter: invert(93%) sepia(4%) saturate(1934%) hue-rotate(29deg)
+    brightness(96%) contrast(93%);
+}
+
+.center-content-footer img:hover {
+  filter: invert(74%) sepia(98%) saturate(302%) hue-rotate(27deg)
+    brightness(107%) contrast(88%);
 }
