--- a/tic-tac-toe/style.css
+++ b/tic-tac-toe/style.css
@@ -5,6 +5,9 @@ h2,
 h1 {
   margin: 0;
 }
+h2 {
+  font-size: 2rem;
+}
 body {
   height: 100vh;
   font-family: "Inter", sans-serif;
@@ -37,6 +40,16 @@ header {
   display: flex;
   justify-content: space-between;
 }
+.left-header {
+  display: flex;
+  width: 30%;
+  justify-content: space-between;
+  align-items: center;
+}
+.right-header {
+  display: flex;
+  align-items: center;
+}
 .logo {
   height: 60px;
   width: 60px;
@@ -50,6 +63,16 @@ header {
 .title {
   font-size: 2rem;
   color: #f662d1;
+}
+.records {
+  font-size: 1rem;
+  color: #d5e3ac;
+  text-transform: uppercase;
+  margin-right: 30px;
+  cursor: pointer;
+}
+.records:hover {
+  color: #bdef53;
 }
 .sound {
   width: 50px;
@@ -70,6 +93,7 @@ main {
 }
 section {
   text-align: center;
+  display: none;
 }
 .container-game {
   display: grid;
@@ -86,6 +110,18 @@ section {
   cursor: pointer;
   line-height: 100px;
   font-size: 60px;
+}
+.style-player {
+  font-family: "Permanent Marker", cursive;
+  font-size: 60px;
+  color: #bdef53;
+  vertical-align: middle;
+}
+.color-blue {
+  color: #60d4cf;
+}
+.color-pink {
+  color: #f662d1;
 }
 .start-game {
   width: 200px;
